--- a/nav.html
+++ b/nav.html
@@ -3,29 +3,58 @@
     <div class="nav-flex01">
         <ul class="main-menu">
             <li class="main-item"><a href="index.php">Home</a></li>
-            <li class="main-item"><a href="#">Create</a>
+            <li class="main-item"><a href="#">Algemeen</a>
                 <ul>
-                    <li><a href="goals.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a></li>
-                    <li><a href="research.php" class="scndlvl">Onderzoek</a></li>
-                    <li><a href="challenges.php" class="scndlvl">Uitdagingen</a></li>
-                    <li><a href="action.php" class="scndlvl">Ons actieplan</a></li>
-                    <li><a href="story.php" class="scndlvl">Uitvoering</a></li>
+                    <li><a href="pag_erd.php" class="scndlvl">ERD schema</a></li>
+                    <li><a href="pag_fout.php" class="scndlvl">Foutmelding</a></li>
+                    <li><a href="pag_controles.php" class="scndlvl">Controle</a></li>
+                    <li><a href="pag_sameprgm.php" class="scndlvl">Zelfde programma</a></li>
+                    <li><a href="pag_nothing.php" class="scndlvl">Nothing</a></li>
                 </ul>
             </li>
-            <li class="main-item"><a href="read-general.php">Read</a>
+            <li class="main-item"><a href="#">Create</a>
                 <ul>
-                    <li><a href="read-explain.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a></li>
-                    <li><a href="prog-read.php" class="scndlvl">Programma</a></li>
+                    <li><a href="create-xpln.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a></li>
+                    <li><a href="#" class="scndlvl">Formulier</a>
+                        <ul>
+                            <li><a href="crea_frm_stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="crea_frm_pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Controle</a>
+                        <ul>
+                            <li><a href="crea_chk_stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="crea_chk_pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Insert</a>
+                        <ul>
+                            <li><a href="crea_ins_stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="crea_ins_pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Demonstratie</a>
+                        <ul>
+                            <li><a href="crea_getpk.php" class="thrdlvl">Simpele</a></li>
+                            <li><a href="crea_selpk.php" class="thrdlvl">Complexe</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li class="main-item"><a href="#">Read</a>
+                <ul>
+                    <li><a href="read-xpln.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a></li>
+                    <li><a href="read-stry.php" class="scndlvl">Het verhaal</a></li>
+                    <li><a href="read-pgm.php" class="scndlvl">Programma</a></li>
                     <li><a href="show-supplier.php" class="scndlvl">Demonstratie</a></li>
                 </ul>
-            <li class="main-item"><a href="update-general.php">Update</a>
+            <li class="main-item"><a href="#">Update</a>
                 <ul>
-                    <li><a href="upd-uitleg.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a>
+                    <li><a href="upd-xpln.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a>
+                    <li><a href="#" class="scndlvl">Selecteer</a>
                         <ul>
-                            <li><a href="correction.php" class="thrdlvl">&nbsp; Extra &nbsp;</a></li>
-                            <li><a href="job-offer.php" class="thrdlvl">Bijzonder</a></li>
-                            <li><a href="compliment.php" class="thrdlvl">&nbsp; &nbsp; Xxx &nbsp; &nbsp;</a></li>
-                            <li><a href="donation.php" class="thrdlvl">&nbsp; &nbsp; Xxx &nbsp; &nbsp;</a></li>
+                            <li><a href="correction.php" class="thrdlvl">Simpele</a></li>
+                            <li><a href="job-offer.php" class="thrdlvl">Complexe</a></li>
                         </ul>
                     </li>
                     <li><a href="upd-getpk.php" class="scndlvl">Demo simpel</a></li>
