--- a/nav.html
+++ b/nav.html
@@ -27,18 +27,13 @@
                             <li><a href="crea_chk_pgm.php" class="thrdlvl">Programma</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" class="scndlvl">Insert</a>
+                    <li><a href="#" class="scndlvl">&nbsp; Insert &nbsp;</a>
                         <ul>
                             <li><a href="crea_ins_stry.php" class="thrdlvl">Verhaal</a></li>
                             <li><a href="crea_ins_pgm.php" class="thrdlvl">Programma</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" class="scndlvl">Demonstratie</a>
-                        <ul>
-                            <li><a href="crea_getpk.php" class="thrdlvl">Simpele</a></li>
-                            <li><a href="crea_selpk.php" class="thrdlvl">Complexe</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="crea-form.php" class="scndlvl">Demonstratie</a></li>
                 </ul>
             </li>
             <li class="main-item"><a href="#">Read</a>
@@ -53,26 +48,55 @@
                     <li><a href="upd-xpln.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a>
                     <li><a href="#" class="scndlvl">Selecteer</a>
                         <ul>
-                            <li><a href="correction.php" class="thrdlvl">Simpele</a></li>
-                            <li><a href="job-offer.php" class="thrdlvl">Complexe</a></li>
+                            <li><a href="upd-sel-simple.php" class="thrdlvl">Simpele</a></li>
+                            <li><a href="upd-sel-complx.php" class="thrdlvl">Complexe</a></li>
                         </ul>
                     </li>
-                    <li><a href="upd-getpk.php" class="scndlvl">Demo simpel</a></li>
-                    <li><a href="upd-selpk.php" class="scndlvl">Demo complex</a></li>
+                    <li><a href="#" class="scndlvl">Formulier</a>
+                        <ul>
+                            <li><a href="upd-frm-stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="upd-frm-pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Controle</a>
+                        <ul>
+                            <li><a href="upd-chk-stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="upd-chk-pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Demonstratie</a>
+                        <ul>
+                            <li><a href="upd-getpk.php" class="thrdlvl">Demo simpel</a></li>
+                            <li><a href="upd-selpk.php" class="thrdlvl">Demo complex</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li class="main-item"><a href="#">Delete</a>
                 <ul>
-                    <li><a href="delete-general.php" class="scndlvl">&nbsp; Uitleg &nbsp;s</a>
+                    <li><a href="del-xpln.php" class="scndlvl">&nbsp; Uitleg &nbsp;</a></li>
+                    <li><a href="#" class="scndlvl">Selecteer</a>
                         <ul>
-                            <li><a href="delete-explain.php" class="thrdlvl">Uitleg game</a></li>
-                            <li><a href="dragon-play.php" class="thrdlvl">De game zelf</a></li>
+                            <li><a href="del-sel-simple.php" class="thrdlvl">Simpele</a></li>
+                            <li><a href="del-sel-complx.php" class="thrdlvl">Complexe</a></li>
                         </ul>
                     </li>
-                    <li><a href="laneswitcher.php" class="scndlvl">Laneswitcher</a>
+                    <li><a href="#" class="scndlvl">Formulier</a>
                         <ul>
-                            <li><a href="lane-explain.php" class="thrdlvl">Uitleg game</a></li>
-                            <li><a href="lane-play.php" class="thrdlvl">De game zelf</a></li>
+                            <li><a href="del-frm-stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="del-frm-pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Controle</a>
+                        <ul>
+                            <li><a href="del-chk-stry.php" class="thrdlvl">Verhaal</a></li>
+                            <li><a href="del-chk-pgm.php" class="thrdlvl">Programma</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="scndlvl">Demonstratie</a>
+                        <ul>
+                            <li><a href="del-getpk.php" class="thrdlvl">Demo simpel</a></li>
+                            <li><a href="del-selpk.php" class="thrdlvl">Demo complex</a></li>
                         </ul>
                     </li>
                 </ul>
