Complexe selectie upd-del

--- a/nav.html
+++ b/nav.html
@@ -96,7 +96,7 @@
                     <li><a href="#" class="scndlvl">Demonstratie</a>
                         <ul>
                             <li><a href="del-getpk.php" class="thrdlvl">Demo simpel</a></li>
-                            <li><a href="del-selpk.php" class="thrdlvl">Demo complex</a></li>
+                            <li><a href="del-upd-selpk.php" class="thrdlvl">Demo complex</a></li>
                         </ul>
                     </li>
                 </ul>
